tests/negative/scope/import-class-twice/test.smol
package testing;
import alpha:C;
import alpha:C;
